objects/ssot__LoyaltyProgramPartnerPromotion__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ContributionPercent__c</fullName>
        <label>Contribution Percentage</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Loyalty Program Partner Promotion Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyProgramPartnerId__c</fullName>
        <label>Loyalty Program Partner</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionId__c</fullName>
        <label>Promotion</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761225337_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyProgramPartnerPromotion_Loyal_rel</label>
        <referenceTo>ssot__LoyaltyProgramPartner__dlm</referenceTo>
        <relationshipLabel>LoyaltyProgramPartnerPromotion_Loyal_rel</relationshipLabel>
        <relationshipName>rel_1697761225337_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761228616_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyProgramPartnerPromotion_Promo_rel</label>
        <referenceTo>ssot__Promotion__dlm</referenceTo>
        <relationshipLabel>LoyaltyProgramPartnerPromotion_Promo_rel</relationshipLabel>
        <relationshipName>rel_1697761228616_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>